--- a/myTheme/base.html
+++ b/myTheme/base.html
@@ -49,7 +49,7 @@
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
       ga('create', '{{ config.google_analytics[0] }}', '{{ config.google_analytics[1] }}');
       ga('send', 'pageview');
@@ -66,7 +66,7 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
       <div class="wy-side-nav-search">
 	{%- block site_name %}
-        <a href="{{ nav.homepage.url }}" class="icon icon-home"> {{ config.site_name }}</a>
+        <a href="{{ nav.homepage.url }}" class="icon icon-book"> {{ config.site_name }}</a>
 	{%- endblock %}
 	{%- block search_button %}
         {% include "searchbox.html" %}
