--- a/myTheme/base.html
+++ b/myTheme/base.html
@@ -80,7 +80,7 @@
     <a href="" class="ssk ssk-twitter"></a>
     <a href="" class="ssk ssk-linkedin"></a>
     <a href="" class="ssk ssk-google-plus"></a>
-    <a href="" class="ssk ssk-mail"></a>
+    <a href="" class="ssk ssk-email"></a>
 </div>
 
       <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
